<resources>
    <string name="app_name">MyCredibleInfo</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="currently_work_here">Currently work here</string>
    <string name="end">End</string>
    <string name="professional_details">Professional Details</string>
    <string name="organization">Organization</string>
    <string name="designation">Designation</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="end_year">End Year</string>
    <string name="education_details">Education Details</string>
    <string name="course">Course</string>

    <string name="start_year">Start Year</string>
    <string name="location">Location</string>
    <string name="organisation">Organisation</string>


    <string name="full_name">Full Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="mobile">Mobile</string>
    <string name="links">Links</string>


    <string-array name="years">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>


    </string-array>

    <string-array name="months">

        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>
