<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDetails">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profess_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="36dp"
        android:layout_marginEnd="69dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="16dp"
        android:text="@string/professional_details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profess_toolbar" />

    <EditText
        android:id="@+id/prd_organisation"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/organization"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/pr_designation"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/designation"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prd_organisation" />

    <CheckBox
        android:id="@+id/prd_checkbox"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="188dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/currently_work_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pr_designation" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/start"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prd_checkbox" />

    <Spinner
        android:id="@+id/prd_start_spinner_month"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:entries="@array/months"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/prd_checkbox" />

    <Spinner
        android:id="@+id/prd_start_spinner_year"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:entries="@array/years"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/prd_start_spinner_month"
        app:layout_constraintTop_toBottomOf="@+id/prd_checkbox" />

    <TextView
        android:id="@+id/end_text"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/end"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <Spinner
        android:id="@+id/prd_end_spinner_month"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:entries="@array/months"
        app:layout_constraintStart_toEndOf="@+id/end_text"
        app:layout_constraintTop_toBottomOf="@+id/prd_start_spinner_month" />


    <Spinner
        android:id="@+id/prd_end_spinner_year"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:entries="@array/years"
        app:layout_constraintStart_toEndOf="@+id/prd_end_spinner_month"
        app:layout_constraintTop_toBottomOf="@+id/prd_start_spinner_year" />


    <Button
        android:id="@+id/prd_save"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prd_end_spinner_month" />


</android.support.constraint.ConstraintLayout>



<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/professional_details"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/prd_organisation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="139dp"
        android:ems="10"
        android:hint="@string/organization"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pr_designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:hint="@string/designation"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/prd_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pr_designation"
        android:layout_marginEnd="188dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="23dp"
        android:text="@string/currently_work_here" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@+id/prd_checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        android:textAlignment="textEnd"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/prd_start_spinner_month"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/prd_checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:entries="@array/months" />

    <Spinner
        android:id="@+id/prd_start_spinner_year"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/prd_checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="84dp"
        android:entries="@array/years" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="10dp"
        android:text="@string/end"
        android:textAlignment="textEnd"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/prd_end_spinner_month"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/prd_start_spinner_month"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="10dp"
        android:entries="@array/months" />


    <Spinner
        android:id="@+id/prd_end_spinner_year"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/prd_start_spinner_year"
        android:layout_alignParentStart="true"
        android:layout_marginStart="214dp"
        android:layout_marginTop="11dp"
        android:entries="@array/years" />


    <Button
        android:id="@+id/prd_save"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:text="@string/save" />
</RelativeLayout>
-->